--- a/scat/templates/start_servers.py.tmpl
+++ b/scat/templates/start_servers.py.tmpl
@@ -2,7 +2,7 @@
 import os
 
 if __name__ == '__main__':
-    os.environ.setdefault("SCAT_SETTINGS_MODULE", "texas.settings")
+    os.environ.setdefault("SCAT_SETTINGS_MODULE", "${ProjectName}.settings")
     from scat.distributed.master import Master
     master = Master()
     master.start('', 1)
